# mirror-proxy

./: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
src/: config.rs  error.rs  main.rs
src/render/: mod.rs
src/storage/: local.rs  mod.rs  nginx.rs  utils.rs
templates/: autoindex.html  error.html  index.html
templates/assets/css/: main.css
tests/nginx/: Dockerfile  README.md  docker-compose.yml  nginx-test.conf
